First half of the project

--- a/church website/index.html
+++ b/church website/index.html
@@ -8,10 +8,11 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- section 1 -->
     <main class="main-section">
-        <div id="nav-bar">
+        <nav id="nav-bar">
             <div class="logo">
-                <img src="Logo.png" alt="logo_picture">
+                <a href="#"><img src="Logo.png" alt="logo_picture"></a>
             </div>
                 <ul class="nav-items">
                     <li class="items">
@@ -28,25 +29,81 @@
                     </li>
                     <li class="items">
                         <a href="#">Locations</a>
+                        <span><img src="feDropDown1.png" alt=""></span>
                     </li>
 
-                    <button class="items">
+                    <button class="sign-in">
                         <a href="#">Sign in</a>
                     </button>
                 </ul>
+            </nav>
+
+        <div class="section-1">
+            <div class="slider-container">
+                <div class="slider">
+                    <img src="Frame_1.png" alt="background picture" width="100%" height="100%">
+                    <img src="Group 14.png" alt="picture-2" width="100%" height="100%">
+                    <img src="DLCF FUNAAB-11 1.png" alt="picture-3" width="100%" height="100%">
+                </div>
+            </div>
+            <div class="arrow"><img src="mdi_arrow-right-bold.png" alt="arrow_next_slide"></div>
+            <div class="text1"><h1><b>WELCOME TO</b></h1></div>
+            <div class="text2"><h3>DEEPER LIFE CAMPUS FELLOWSHIP,<br>
+                OGUN CENTRAL
+            </h3></div>
+            <div class="text3"><h4>DISCOVER FAITH, FELLOWSHIP AND PURPOSE AS YOU WORSHIP WITH US</h4></div>
         </div>
-
-        <div>
-
+<!--section 2  -->
+        <div class="section-2">
+            <div class="logo-center"><img src="Logo.png" alt="centered-logo"></div>
+            <div class="info">
+                <h4>Welcome to DLCF Ogun Central</h4>
+                <p class="first-info">
+                    Welcome to the official website of Deeper Life Campus Fellowship Ogun Central! 
+                    We are thrilled to showcase the <br>meaningful work and impact we bring to our campus community.
+                </p>
+                <h4>Nuturing Spiritual Growth Together</h4>
+                <p class="second-info">
+                    At Deeper Life Campus Fellowship Ogun Central, our primary focus is to foster spiritual growth and
+                    development within our community. We achieve this by providing a nurturing environment that encourages
+                    and supports the journey towards a deeper understanding of God's word and a stronger relationship with
+                    Him. Our diverse range of activities includes prayer meetings,engaging bible studies,
+                    impactful mentorship programs, and other enriching endeavors.
+                </p>
+                <h4>Join Our Locations</h4>
+                <p class="third-class">
+                    With our local chapters conveniently located across the state,
+                    you can easily connect with like-minded individuals and fellow members.
+                    Engage in various events and activities organized by your local chapter,
+                    fostering a sense of unity and shared purpose.
+                </p>
+                <h4>Abundant Resources & Support</h4>
+                <p class="fourth-class">
+                    As part of our commitment to our members' growth, we offer a wealth of resources and support. 
+                    Count on us for spiritual guidance and leadership development programs that empower you to become a stronger and 
+                    more knowledgeable leader. Our mentorship opportunities allow for personal growth and mentorship in faith-centered studies.
+                    Furthermore, we extend our support by providing scholarships to those aspiring to pursue higher education in faith-focused studies.
+                    Join us in this rewarding journey of spiritual growth and connection, and let us grow together in faith and purpose.
+                </p>
+            </div>
         </div>
+        <hr>
+        <!-- section 3 -->
+        <div class="section-3">
+            <h3 >PUBLICATIONS</h3>
+            <div class="parent-div">
+                <div class="box-1">
+                    <div class="bible-img"><img src="bible.png" alt="bible_pics"></div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Molestiae, sequi, numquam ut sit sapiente accusantium 
+                        libero assumenda aut laborum iure iste autem culpa ea, voluptatem qui.
+                        Eum unde doloremque distinctio.
+                    </p>
+                </div>
 
-        <div>
-
-        </div>
-
-        <div>
-
+            </div>
         </div>
     </main>
+    <script src="script.js"></script>
 </body>
 </html>
