Changes made upto section-3

--- a/church website/index.html
+++ b/church website/index.html
@@ -46,12 +46,14 @@
                     <img src="DLCF FUNAAB-11 1.png" alt="picture-3" width="100%" height="100%">
                 </div>
             </div>
-            <div class="arrow"><img src="mdi_arrow-right-bold.png" alt="arrow_next_slide"></div>
-            <div class="text1"><h1><b>WELCOME TO</b></h1></div>
-            <div class="text2"><h3>DEEPER LIFE CAMPUS FELLOWSHIP,<br>
-                OGUN CENTRAL
-            </h3></div>
-            <div class="text3"><h4>DISCOVER FAITH, FELLOWSHIP AND PURPOSE AS YOU WORSHIP WITH US</h4></div>
+            <div class="welcome-arrow">
+                <div class="welcome-text"><h1 style="font-weight: 900; font-size: 100px; height: 62px;"><b>WELCOME TO</b></h1>
+                    <h3 style="font-size: 40px; font-weight: 300; height: 62px;">DEEPER LIFE CAMPUS FELLOWSHIP,<br>
+                    OGUN CENTRAL</h3>
+                    <h4 style="font-size: 23px; font-weight: 100;">DISCOVER FAITH, FELLOWSHIP AND PURPOSE AS YOU WORSHIP WITH US</h4>
+                </div>
+                <div class="arrow"><img src="mdi_arrow-right-bold.png" alt="arrow_next_slide"></div>
+            </div>
         </div>
 <!--section 2  -->
         <div class="section-2">
@@ -93,11 +95,41 @@
             <h3 >PUBLICATIONS</h3>
             <div class="parent-div">
                 <div class="box-1">
-                    <div class="bible-img"><img src="bible.png" alt="bible_pics"></div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    <div class="bible-img common"><img src="bible.png" alt="bible_pics"></div>
+                    <p class="box-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                         Molestiae, sequi, numquam ut sit sapiente accusantium 
                         libero assumenda aut laborum iure iste autem culpa ea, voluptatem qui.
                         Eum unde doloremque distinctio.
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                        Tenetur aliquid totam aut blanditiis nesciunt modi, mollitia quasi laborum ipsum culpa, odit excepturi. 
+                        Atque debitis laudantium maiores explicabo at facere facilis.
+                    </p>
+                </div>
+
+                <div class="box-2">
+                    <div class="cool-waters-img common"><img src="cool_waters.png" alt="cool_waters pic"></div>
+                    <p class="box-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Molestiae, sequi, numquam ut sit sapiente accusantium 
+                        libero assumenda aut laborum iure iste autem culpa ea, voluptatem qui.
+                        Eum unde doloremque distinctio.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos,
+                        sequi quisquam rem cumque quasi 
+                        tenetur distinctio tempora
+                        quaerat molestiae voluptates veritatis iste sunt quos debitis sapiente perferendis.
+                        Neque, at numquam.
+                    </p>
+                </div>
+
+                <div class="box-3">
+                    <div class="fire-img common"><img src="fire.png" alt="fire pics"></div>
+                    <p class="box-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Molestiae, sequi, numquam ut sit sapiente accusantium 
+                        libero assumenda aut laborum iure iste autem culpa ea, voluptatem qui.
+                        Eum unde doloremque distinctio.
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                        Officia doloremque expedita impedit, voluptate, maxime similique 
+                        nostrum laudantium at voluptatibus facere ipsum assumenda, 
+                        est accusantium ullam magnam quaerat aspernatur adipisci excepturi.
                     </p>
                 </div>
 
