Changes made for the landing page

--- a/church website/index.html
+++ b/church website/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DLCF FUNNAAB WEBSITE</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;1,900&family=Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer"
+    />
 </head>
+
 <body>
     <!-- section 1 -->
     <main class="main-section">
@@ -14,128 +24,141 @@
             <div class="logo">
                 <a href="#"><img src="Logo.png" alt="logo_picture"></a>
             </div>
-                <ul class="nav-items">
-                    <li class="items">
-                        <a href="#">Home</a>
-                    </li>
-                    <li class="items">
-                        <a href="#">About Us</a>
-                    </li>
-                    <li class="items">
-                        <a href="#">Report</a>
-                    </li>
-                    <li class="items">
-                        <a href="#">Publications</a>
-                    </li>
-                    <li class="items">
-                        <a href="#">Locations</a>
-                        <span><img src="feDropDown1.png" alt=""></span>
-                    </li>
+            <ul class="nav-items">
+                <li class="items">
+                    <a href="#">Home</a>
+                </li>
+                <li class="items">
+                    <a href="#">About Us</a>
+                </li>
+                <li class="items">
+                    <a href="#">Report</a>
+                </li>
+                <li class="items">
+                    <a href="#">Publications</a>
+                </li>
+                <li class="items">
+                    <a href="#">Locations</a>
+                    <span><img src="feDropDown1.png" alt="#"></span>
+                </li>
 
-                    <button class="sign-in">
+                <button class="sign-in">
                         <a href="#">Sign in</a>
                     </button>
-                </ul>
-            </nav>
+            </ul>
+        </nav>
 
         <div class="section-1">
             <div class="slider-container">
                 <div class="slider">
                     <img src="Frame_1.png" alt="background picture" width="100%" height="100%">
                     <img src="Group 14.png" alt="picture-2" width="100%" height="100%">
-                    <img src="DLCF FUNAAB-11 1.png" alt="picture-3" width="100%" height="100%">
+                    <img src="Group 32.png" alt="picture-3" width="100%" height="100%">
                 </div>
             </div>
             <div class="welcome-arrow">
-                <div class="welcome-text"><h1 style="font-weight: 900; font-size: 100px; height: 62px;"><b>WELCOME TO</b></h1>
-                    <h3 style="font-size: 40px; font-weight: 300; height: 62px;">DEEPER LIFE CAMPUS FELLOWSHIP,<br>
-                    OGUN CENTRAL</h3>
+                <div class="welcome-text">
+                    <h1 style="font-weight: 900; font-size: 100px; height: 55px;"><b>WELCOME TO</b></h1>
+                    <h3 style="font-size: 40px; font-weight: 300; height: 62px;">DEEPER LIFE CAMPUS FELLOWSHIP,<br> OGUN CENTRAL</h3>
                     <h4 style="font-size: 23px; font-weight: 100;">DISCOVER FAITH, FELLOWSHIP AND PURPOSE AS YOU WORSHIP WITH US</h4>
                 </div>
                 <div class="arrow"><img src="mdi_arrow-right-bold.png" alt="arrow_next_slide"></div>
             </div>
         </div>
-<!--section 2  -->
+        <!--section 2  -->
         <div class="section-2">
             <div class="logo-center"><img src="Logo.png" alt="centered-logo"></div>
             <div class="info">
                 <h4>Welcome to DLCF Ogun Central</h4>
                 <p class="first-info">
-                    Welcome to the official website of Deeper Life Campus Fellowship Ogun Central! 
-                    We are thrilled to showcase the <br>meaningful work and impact we bring to our campus community.
+                    Welcome to the official website of Deeper Life Campus Fellowship Ogun Central! We are thrilled to showcase the <br>meaningful work and impact we bring to our campus community.
                 </p>
                 <h4>Nuturing Spiritual Growth Together</h4>
                 <p class="second-info">
-                    At Deeper Life Campus Fellowship Ogun Central, our primary focus is to foster spiritual growth and
-                    development within our community. We achieve this by providing a nurturing environment that encourages
-                    and supports the journey towards a deeper understanding of God's word and a stronger relationship with
-                    Him. Our diverse range of activities includes prayer meetings,engaging bible studies,
-                    impactful mentorship programs, and other enriching endeavors.
+                    At Deeper Life Campus Fellowship Ogun Central, our primary focus is to foster spiritual growth and development within our community. We achieve this by providing a nurturing environment that encourages and supports the journey towards a deeper understanding
+                    of God's word and a stronger relationship with Him. Our diverse range of activities includes prayer meetings,engaging bible studies, impactful mentorship programs, and other enriching endeavors.
                 </p>
                 <h4>Join Our Locations</h4>
                 <p class="third-class">
-                    With our local chapters conveniently located across the state,
-                    you can easily connect with like-minded individuals and fellow members.
-                    Engage in various events and activities organized by your local chapter,
-                    fostering a sense of unity and shared purpose.
+                    With our local chapters conveniently located across the state, you can easily connect with like-minded individuals and fellow members. Engage in various events and activities organized by your local chapter, fostering a sense of unity and shared purpose.
                 </p>
                 <h4>Abundant Resources & Support</h4>
                 <p class="fourth-class">
-                    As part of our commitment to our members' growth, we offer a wealth of resources and support. 
-                    Count on us for spiritual guidance and leadership development programs that empower you to become a stronger and 
-                    more knowledgeable leader. Our mentorship opportunities allow for personal growth and mentorship in faith-centered studies.
-                    Furthermore, we extend our support by providing scholarships to those aspiring to pursue higher education in faith-focused studies.
-                    Join us in this rewarding journey of spiritual growth and connection, and let us grow together in faith and purpose.
+                    As part of our commitment to our members' growth, we offer a wealth of resources and support. Count on us for spiritual guidance and leadership development programs that empower you to become a stronger and more knowledgeable leader. Our mentorship opportunities
+                    allow for personal growth and mentorship in faith-centered studies. Furthermore, we extend our support by providing scholarships to those aspiring to pursue higher education in faith-focused studies. Join us in this rewarding journey
+                    of spiritual growth and connection, and let us grow together in faith and purpose.
                 </p>
             </div>
         </div>
         <hr>
         <!-- section 3 -->
         <div class="section-3">
-            <h3 >PUBLICATIONS</h3>
+            <h3>PUBLICATIONS</h3>
             <div class="parent-div">
                 <div class="box-1">
                     <div class="bible-img common"><img src="bible.png" alt="bible_pics"></div>
-                    <p class="box-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Molestiae, sequi, numquam ut sit sapiente accusantium 
-                        libero assumenda aut laborum iure iste autem culpa ea, voluptatem qui.
-                        Eum unde doloremque distinctio.
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-                        Tenetur aliquid totam aut blanditiis nesciunt modi, mollitia quasi laborum ipsum culpa, odit excepturi. 
-                        Atque debitis laudantium maiores explicabo at facere facilis.
+                    <p class="box-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, sequi, numquam ut sit sapiente accusantium libero assumenda aut laborum iure iste autem culpa ea, voluptatem qui. Eum unde doloremque distinctio. Lorem ipsum dolor
+                        sit amet, consectetur adipisicing elit. Tenetur aliquid totam aut blanditiis nesciunt modi, mollitia quasi laborum ipsum culpa, odit excepturi. Atque debitis laudantium maiores explicabo at facere facilis.
                     </p>
                 </div>
 
                 <div class="box-2">
                     <div class="cool-waters-img common"><img src="cool_waters.png" alt="cool_waters pic"></div>
-                    <p class="box-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Molestiae, sequi, numquam ut sit sapiente accusantium 
-                        libero assumenda aut laborum iure iste autem culpa ea, voluptatem qui.
-                        Eum unde doloremque distinctio.
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos,
-                        sequi quisquam rem cumque quasi 
-                        tenetur distinctio tempora
-                        quaerat molestiae voluptates veritatis iste sunt quos debitis sapiente perferendis.
-                        Neque, at numquam.
+                    <p class="box-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, sequi, numquam ut sit sapiente accusantium libero assumenda aut laborum iure iste autem culpa ea, voluptatem qui. Eum unde doloremque distinctio. Lorem ipsum dolor
+                        sit amet consectetur adipisicing elit. Eos, sequi quisquam rem cumque quasi tenetur distinctio tempora quaerat molestiae voluptates veritatis iste sunt quos debitis sapiente perferendis. Neque, at numquam.
                     </p>
                 </div>
 
                 <div class="box-3">
                     <div class="fire-img common"><img src="fire.png" alt="fire pics"></div>
-                    <p class="box-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Molestiae, sequi, numquam ut sit sapiente accusantium 
-                        libero assumenda aut laborum iure iste autem culpa ea, voluptatem qui.
-                        Eum unde doloremque distinctio.
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-                        Officia doloremque expedita impedit, voluptate, maxime similique 
-                        nostrum laudantium at voluptatibus facere ipsum assumenda, 
-                        est accusantium ullam magnam quaerat aspernatur adipisci excepturi.
+                    <p class="box-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, sequi, numquam ut sit sapiente accusantium libero assumenda aut laborum iure iste autem culpa ea, voluptatem qui. Eum unde doloremque distinctio. Lorem ipsum, dolor
+                        sit amet consectetur adipisicing elit. Officia doloremque expedita impedit, voluptate, maxime similique nostrum laudantium at voluptatibus facere ipsum assumenda, est accusantium ullam magnam quaerat aspernatur adipisci excepturi.
                     </p>
                 </div>
 
             </div>
         </div>
+        <!-- footer-section -->
+        <div class="parent-footer">
+            <div class="address">
+                <div class="contents1">
+                    <span class="ft-title">Address</span>
+                    <a href="#" target="_blank"><i class="fa-regular fa-envelope" style="color: #1355c9;"></i>info@dlcfsw.com.ng</a>
+                    <a href="#" target="_blank"><i class="fa-solid fa-phone" style="color: #1f10ea;"></i>080xxxxxxxxxx</a>
+                    <a href="#" target="_blank">2-10, AYODELE OKEOWO <br>STREET GBAGADA, LAGOS</a>
+                </div>
+            </div>
+            <div class="home">
+                <div class="contents1">
+                    <span class="ft-title">Home</span>
+                    <a href="#" target="_blank"><i class="fa-regular fa-envelope" style="color: #1355c9;"></i>About us</a>
+                    <a href="#" target="_blank"><i class="fa-solid fa-phone" style="color: #1f10ea;"></i></i>Publications</a>
+                    <a href="#" target="_blank">Report</a>
+                    <a href="#" target="_blank">Locations</a>
+
+
+                </div>
+            </div>
+            <div class="sermon">
+                <div class="contents1">
+                    <span class="ft-title">SERMON</span>
+                    <a href="#" target="_blank"><i class="fa-regular fa-envelope" style="color: #1355c9;"></i>Bible Studies</a>
+                    <a href="#" target="_blank"><i class="fa-solid fa-phone" style="color: #1f10ea;"></i></i>Sunday Worships</a>
+                    <a href="#" target="_blank">Thursday Revival and Evangelism Training Service</a>
+                    <a href="#" target="_blank">Special Messages</a>
+                </div>
+            </div>
+            <div class="events">
+                <div class="contents1">
+                    <span class="ft-title">Events</span>
+                    <a href="#" target="_blank"><i class="fa-regular fa-envelope" style="color: #1355c9;"></i>GCK July Edition</a>
+                    <a href="#" target="_blank"><i class="fa-solid fa-phone" style="color: #1f10ea;"></i></i>Coming soon</a>
+                    <a href="#" target="_blank">Coming soon</a>
+                </div>
+            </div>
+        </div>
     </main>
     <script src="script.js"></script>
 </body>
+
 </html>
