--- a/church website/index.html
+++ b/church website/index.html
@@ -15,6 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;1,900&family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer"
     />
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 </head>
 
@@ -47,12 +48,12 @@
                             <div class="funaab-container">
                                 <div class="funaab-elem">
                                     <a class="funaab-menu" href="www.google.com">CAMP <span style="opacity: 0;">....</span></a>
-                                    <a class="funaab-menu" href="#">BETHEL<span style="opacity: 0;">.</span></a>
-                                    <a class="funaab-menu" href="#">PENIEL <span style="opacity: 0;">..</span></a>
-                                    <a class="funaab-menu" href="#">EXCEL <span style="opacity: 0;">....</span></a>
+                                    <a class="funaab-menu" href="#">BETHEL</a>
+                                    <a class="funaab-menu" href="#">PENIEL</a>
+                                    <a class="funaab-menu" href="#">EXCEL</a>
                                     <a class="funaab-menu" href="#">ACCORD</a>
                                     <a class="funaab-menu" href="#">APAKILA</a>
-                                    <a class="funaab-menu" href="#">SUB <span style="opacity: 0;">.........</span></a>
+                                    <a class="funaab-menu" href="#">SUB </a>
                                 </div>
                             </div>
 
@@ -68,6 +69,11 @@
                         <a href="#">Sign in</a>
                     </button>
             </ul>
+            <div class="hamburger">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
         </nav>
 
         <div class="section-1">
@@ -80,11 +86,11 @@
             </div>
             <div class="welcome-arrow">
                 <div class="welcome-text">
-                    <h1 style="font-weight: 900; font-size: 100px; height: 55px;"><b>WELCOME TO</b></h1>
-                    <h3 style="font-size: 40px; font-weight: 300; height: 62px;">DEEPER LIFE CAMPUS FELLOWSHIP,<br> OGUN CENTRAL</h3>
-                    <h4 style="font-size: 23px; font-weight: 100;">DISCOVER FAITH, FELLOWSHIP AND PURPOSE AS YOU WORSHIP WITH US</h4>
+                    <h1>WELCOME TO</h1>
+                    <h3>DEEPER LIFE CAMPUS FELLOWSHIP,<br> OGUN CENTRAL</h3>
+                    <h4>DISCOVER FAITH, FELLOWSHIP AND PURPOSE AS YOU WORSHIP WITH US</h4>
                 </div>
-                <div class="arrow"><img src="mdi_arrow-right-bold.png" alt="arrow_next_slide"></div>
+                <div class="arrow"><img style="opacity: 0.4;" src="mdi_arrow-right-bold.png" alt="arrow_next_slide"></div>
             </div>
         </div>
         <!--section 2  -->
@@ -143,39 +149,41 @@
         </div>
         <!-- footer-section -->
         <div class="parent-footer">
-            <div class="address">
-                <div class="contents1">
-                    <span class="ft-title">Address</span>
-                    <a href="#" target="_blank"><i class="fa-regular fa-envelope" style="color: #1355c9;"></i>info@dlcfsw.com.ng</a>
-                    <a href="#" target="_blank"><i class="fa-solid fa-phone" style="color: #1f10ea;"></i>080xxxxxxxxxx</a>
-                    <a href="#" target="_blank">2-10, AYODELE OKEOWO <br>STREET GBAGADA, LAGOS</a>
+            <div class="middle-man-footer">
+                <div class="address">
+                    <div class="contents1">
+                        <span class="ft-title">ADDRESS</span>
+                        <a href="#" target="_blank"><i class="fa-regular fa-envelope" style="color: #1355c9;"></i>info@dlcfsw.com.ng</a>
+                        <a href="#" target="_blank"><i class="fa-solid fa-phone" style="color: #1f10ea;"></i>080xxxxxxxxxx</a>
+                        <a href="#" target="_blank">2-10, AYODELE OKEOWO <br>STREET GBAGADA, LAGOS</a>
+                    </div>
                 </div>
-            </div>
-            <div class="home">
-                <div class="contents1">
-                    <span class="ft-title">Home</span>
-                    <a href="#" target="_blank"><i class="fa-regular fa-envelope" style="color: #1355c9;"></i>About us</a>
-                    <a href="#" target="_blank"><i class="fa-solid fa-phone" style="color: #1f10ea;"></i></i>Publications</a>
-                    <a href="#" target="_blank">Report</a>
-                    <a href="#" target="_blank">Locations</a>
+                <div class="home">
+                    <div class="contents1">
+                        <span class="ft-title">HOME</span>
+                        <a href="#" target="_blank"><i class="fa-regular fa-envelope" style="color: #1355c9;"></i>About us</a>
+                        <a href="#" target="_blank"><i class="fa-solid fa-phone" style="color: #1f10ea;"></i></i>Publications</a>
+                        <a href="#" target="_blank">Report</a>
+                        <a href="#" target="_blank">Locations</a>
 
+                    </div>
                 </div>
-            </div>
-            <div class="sermon">
-                <div class="contents1">
-                    <span class="ft-title">SERMON</span>
-                    <a href="#" target="_blank"><i class="fa-regular fa-envelope" style="color: #1355c9;"></i>Bible Studies</a>
-                    <a href="#" target="_blank"><i class="fa-solid fa-phone" style="color: #1f10ea;"></i></i>Sunday Worships</a>
-                    <a href="#" target="_blank">Thursday Revival and Evangelism Training Service</a>
-                    <a href="#" target="_blank">Special Messages</a>
+                <div class="sermon">
+                    <div class="contents1">
+                        <span class="ft-title">SERMON</span>
+                        <a href="#" target="_blank"><i class="fa-regular fa-envelope" style="color: #1355c9;"></i>Bible Studies</a>
+                        <a href="#" target="_blank"><i class="fa-solid fa-phone" style="color: #1f10ea;"></i></i>Sunday Worships</a>
+                        <a href="#" target="_blank">Thursday Revival and Evangelism Training Service</a>
+                        <a href="#" target="_blank">Special Messages</a>
+                    </div>
                 </div>
-            </div>
-            <div class="events">
-                <div class="contents1">
-                    <span class="ft-title">Events</span>
-                    <a href="#" target="_blank"><i class="fa-regular fa-envelope" style="color: #1355c9;"></i>GCK July Edition</a>
-                    <a href="#" target="_blank"><i class="fa-solid fa-phone" style="color: #1f10ea;"></i></i>Coming soon</a>
-                    <a href="#" target="_blank">Coming soon</a>
+                <div class="events">
+                    <div class="contents1">
+                        <span class="ft-title">EVENTS</span>
+                        <a href="#" target="_blank"><i class="fa-regular fa-envelope" style="color: #1355c9;"></i>GCK July Edition</a>
+                        <a href="#" target="_blank"><i class="fa-solid fa-phone" style="color: #1f10ea;"></i></i>Coming soon</a>
+                        <a href="#" target="_blank">Coming soon</a>
+                    </div>
                 </div>
             </div>
         </div>
